remove download links

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Derr's Projects
-description: 
+title: Continuously Me
+description: Just Me Being Me. Continuously.
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-midnight
 
 gems:
